# dbxtop

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  version-bump.yml
docs/planning/: api-research.md  architecture.md  implementation-plan.md  specification.md
scripts/: generate_demo_screenshots.py
src/dbxtop/: __init__.py  __main__.py  app.py  cli.py  config.py
src/dbxtop/analytics/: accumulator.py  engine.py  models.py  run.py  run_manager.py
src/dbxtop/api/: cache.py  client.py  models.py  poller.py  spark_api.py
src/dbxtop/screens/: __init__.py  error_detail.py  task_list.py
src/dbxtop/styles/: default.tcss
src/dbxtop/utils/: error_classifier.py
src/dbxtop/views/: analytics.py  base.py  cluster.py  executors.py  jobs.py  run_comparison.py  run_list.py  sql.py  stages.py  storage.py
src/dbxtop/widgets/: footer.py  header.py  progress_cell.py  spark_line.py  status_indicator.py
tests/: conftest.py  test_accumulator.py  test_analytics_engine.py  test_analytics_models.py  test_analytics_view.py  test_cache.py  test_cli.py  test_client_errors.py  test_config.py  test_detectors_extended.py  test_keepalive.py  test_models.py  test_run_comparison.py  test_run_manager.py  test_run_session.py  test_snapshots.py  test_spark_api.py  test_widgets.py
