[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbxtop"
dynamic = ["version"]
description = "Real-time terminal dashboard for Databricks/Spark clusters"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Oz Levi" }]
keywords = ["databricks", "spark", "monitoring", "tui", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "textual>=2.1.0,<3.0",
    "databricks-sdk>=0.38.0,<1.0",
    "httpx>=0.27.0,<1.0",
    "click>=8.1.0,<9.0",
    "pydantic>=2.5.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "textual-dev>=1.0",
    "ruff>=0.4.0",
    "mypy>=1.8",
]

[project.scripts]
dbxtop = "dbxtop.cli:main"

[project.urls]
Homepage = "https://github.com/ozlevi/dbxtop"
Issues = "https://github.com/ozlevi/dbxtop/issues"

[tool.hatch.version]
path = "src/dbxtop/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dbxtop"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.mypy]
python_version = "3.9"
strict = true
